# financial_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  README_zh-TW.md  app.py  env.example  index.js  package.json  pyproject.toml  requirements.txt  start.sh  zbpack.json
.streamlit/: config.toml
src/dexter/: agent.py  cli.py  model.py  prompts.py  prompts_zh_tw.py  schemas.py  streamlit_ui.py  tools.py
src/dexter/utils/: intro.py  logger.py  ui.py
